samples/_failures_safe/1761266161_155b7c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a5db1fa.c: In function ‘main’:
./samples/SAFE/__tmp_5a5db1fa.c:159:27: error: expected ‘;’ at end of input
  159 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_5a5db1fa.c:159:21: error: expected declaration or statement at end of input
  159 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_5a5db1fa.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5a5db1fa.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5a5db1fa.c:159:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5a5db1fa.c:159:21: error: expected declaration or statement at end of input
